--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.13",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "firebase": "^9.22.2",
+    "framer-motion": "^10.12.16",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.244.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-particles": "^2.10.1",
     "react-router-dom": "^6.12.1",
     "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.12"
+    "sweetalert2": "^11.7.12",
+    "swiper": "^9.4.1",
+    "tsparticles": "^2.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
